<resources>
  <string name="app_name">Connpass Viewer</string>
  <string name="time">%s~</string>
  <string name="day">(%s)</string>
  <string name="date">%1$s/%2$s</string>
  <string name="capacity">%1$d/%2$d人</string>
  <string name="title_activity_top">TopActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>

  <string name="my_event">マイイベント</string>
  <string name="advanced_search">詳細検索"</string>
  <string name="settings">設定</string>
  <string name="favorite">お気に入り</string>
  <string name="black_list">ブラックリスト</string>
  <string name="new_event">新着イベント</string>

  <string name="setting_me">my設定</string>
  <string name="setting_search">検索設定</string>
  <string name="keyword">キーワード</string>
  <string name="and">and</string>
  <string name="or">or</string>
  <string name="start_date">検索開始日時</string>
  <string name="end_date">終了日時</string>
  <string name="nick_name">ニックネーム</string>
  <string name="search">検索</string>
  <string name="user_name">ユーザー名</string>
  <string name="simple_search_setting">簡易検索設定</string>
  <string name="simple_search_range">検索範囲</string>
  <string-array name="simple_search_range_array">
    <item>無制限</item>
    <item>今日から１週間</item>
    <item>今日から２週間</item>
    <item>今日から１か月</item>
  </string-array>
  <string-array name="advanced_search_range_array">
    <item>から１週間</item>
    <item>から２週間</item>
    <item>から１か月</item>
    <item>無制限</item>
  </string-array>
  <string name="search_or">or検索</string>
  <string name="search_and">and検索</string>
</resources>
