<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:icon="@drawable/ic_action_my_event"
        android:id="@+id/nav_my_event"
        android:title="@string/my_event" />
    <item
        android:id="@+id/nav_advanced_search"
        android:icon="@drawable/ic_action_plus"
        android:title="@string/advanced_search" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_action_fav"
        android:title="@string/favorite" />
    <item
        android:id="@+id/nav_black_list"
        android:icon="@drawable/ic_action_ban"
        android:title="@string/black_list" />
  </group>

  <item android:title="@string/settings">
    <menu>
      <item
          android:id="@+id/nav_setting"
          android:icon="@drawable/ic_action_setting"
          android:title="@string/setting_me" />
      <item
          android:id="@+id/nav_send"
          android:title="@string/setting_search" />
    </menu>
  </item>

</menu>