<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      android:id="@+id/linearLayout3"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp">

    <TextView
        android:labelFor="@+id/userNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"/>

    <EditText
        android:id="@+id/userNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"/>
  </LinearLayout>

  <TextView
      android:textSize="20sp"
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/simple_search_setting"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/textView5"
      app:layout_constraintLeft_toLeftOf="parent"
      android:id="@+id/linearLayout4"
      android:layout_marginStart="8dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_search_range"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <Spinner
        android:background="@drawable/border_bottom"
        android:textAlignment="textEnd"
        android:id="@+id/spinner"
        android:entries="@array/simple_search_range_array"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

  </LinearLayout>

  <RadioGroup
      android:id="@+id/radio_group"
      android:orientation="horizontal"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="9dp"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginStart="8dp">

    <RadioButton
        android:id="@+id/radioAnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/search_and"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="63dp"/>

    <RadioButton
        android:id="@+id/radioOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/search_or"/>

  </RadioGroup>

  <Button
      android:id="@+id/button"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:text="@string/settings"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
